# CMakeExample

./: .clang-format  .clang-tidy  .gitignore  .gitlint  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Readme.md  oldCMakePresets.json
app/: CMakeLists.txt
app/include/: agent_data.hpp  person.hpp
app/src/: agent_data.cpp  main.cpp
benchmarks/: CMakeLists.txt  README.md  agent_data_benchmark.cpp  main.cpp
cmake/: BuildInfo.cmake  BundleRuntimeDeps.cmake  CompilerDefinitions.cmake  CompilerRuntime.cmake  CompilerWarnings.cmake  FastBuild.cmake  Options.cmake  ProjectSetup.cmake  Sanitizers.cmake  StaticAnalysis.cmake  TargetSetup.cmake
core/: CMakeLists.txt
core/include/: agent_data.hpp
core/src/: agent_data.cpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/core/: CMakeLists.txt
src/core/include/: pch.hpp  person.hpp
src/utils/include/: logger.hpp
tests/: CMakeLists.txt  person_tests.cpp
